# django-admin-advanced-search

./: .gitignore  AGENTS.md  LICENSE  README.md  README_zh.md  demo.py  improved_parser.py  pyproject.toml  pytest.ini  run_tests.py  simple_test.py  test_combined_search.py  test_field_types.py  test_fix_verification.py  test_regex.py
.github/workflows/: publish.yml
django_admin_advanced_search/: __init__.py  mixins.py  mixins.py.bak  parser.py  utils.py
django_admin_advanced_search/field_types/: __init__.py  base.py  datetime.py  number.py  string.py
docs/: testing.md  testing_zh.md  usage.md  usage_zh.md
tests/: models.py  settings.py  test_field_types.py  test_mixin.py  test_mixin_new.py  test_mixin_old.py  test_parser.py
