[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-admin-advanced-search"
version = "0.1.3"
description = "Advanced search syntax for Django Admin"
readme = "README.md"
authors = [{name = "shifenhutu", email = "shifenhutu@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
keywords = ["django", "admin", "search", "filter", "advanced-search"]
dependencies = [
    "Django>=5.1",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/shifenhutu/django-admin-advanced-search"
Repository = "https://github.com/shifenhutu/django-admin-advanced-search"
Documentation = "https://github.com/shifenhutu/django-admin-advanced-search/blob/main/README.md"
Issues = "https://github.com/shifenhutu/django-admin-advanced-search/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_admin_advanced_search*"]

[tool.setuptools.package-data]
django_admin_advanced_search = ["py.typed"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
